# p1exporter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  p1exporter.py  p1reader.py  pyproject.toml  requirements.txt  setup.cfg
p1exporter/: p1reader.py
sample/: fulllist.txt
scripts/: p1.py  p1exporter  p1exporter.py
tests/: fake_p1reader.py  p1exporter  test_p1reader.py
