[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-s --cov=p1exporter --cov-report xml --cov-report term"
testpaths = ["tests"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = ["fixme", "logging-fstring-interpolation"]
